--- a/src/taller/taller.ui
+++ b/src/taller/taller.ui
@@ -36,7 +36,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>5</number>
     </property>
     <property name="elideMode">
      <enum>Qt::ElideLeft</enum>
@@ -183,7 +183,7 @@ border-radius:10px;
        <rect>
         <x>690</x>
         <y>10</y>
-        <width>181</width>
+        <width>161</width>
         <height>81</height>
        </rect>
       </property>
@@ -226,7 +226,7 @@ border-radius:10px;
        <rect>
         <x>10</x>
         <y>180</y>
-        <width>861</width>
+        <width>841</width>
         <height>471</height>
        </rect>
       </property>
@@ -294,7 +294,7 @@ border-radius:10px;
        </rect>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="page">
        <widget class="QLineEdit" name="lineEdit">
@@ -318,7 +318,7 @@ border-radius:10px;
          <rect>
           <x>10</x>
           <y>80</y>
-          <width>861</width>
+          <width>841</width>
           <height>571</height>
          </rect>
         </property>
@@ -378,7 +378,7 @@ border-radius:10px;
        <widget class="QPushButton" name="pushButton">
         <property name="geometry">
          <rect>
-          <x>760</x>
+          <x>740</x>
           <y>10</y>
           <width>111</width>
           <height>41</height>
@@ -562,7 +562,7 @@ color: rgb(255, 255, 255);</string>
        <rect>
         <x>20</x>
         <y>30</y>
-        <width>851</width>
+        <width>831</width>
         <height>621</height>
        </rect>
       </property>
@@ -640,21 +640,6 @@ border-radius: 10px;</string>
       <property name="selectionMode">
        <enum>QAbstractItemView::NoSelection</enum>
       </property>
-      <item>
-       <property name="text">
-        <string>Aceite</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Caja Hidráulica</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Juego de Llaves</string>
-       </property>
-      </item>
      </widget>
      <widget class="QLabel" name="label_10">
       <property name="geometry">
@@ -706,7 +691,7 @@ border-radius: 10px;</string>
        <locale language="Spanish" country="Venezuela"/>
       </property>
       <property name="text">
-       <string>Nro. de Placa : JKL34I2</string>
+       <string>Nro. de Placa : </string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -826,21 +811,6 @@ border-radius: 10px;</string>
       <property name="selectionMode">
        <enum>QAbstractItemView::NoSelection</enum>
       </property>
-      <item>
-       <property name="text">
-        <string>Sistema Motor</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Sistema de Transmisión</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Sistema de Lubricación</string>
-       </property>
-      </item>
      </widget>
      <widget class="QLabel" name="label_falla_diag">
       <property name="geometry">
@@ -877,7 +847,7 @@ border-radius:10px;
        <enum>QFrame::Raised</enum>
       </property>
       <property name="text">
-       <string>Problema: Motor no Prende</string>
+       <string/>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -959,7 +929,7 @@ border-radius:10px;
        <rect>
         <x>20</x>
         <y>30</y>
-        <width>851</width>
+        <width>831</width>
         <height>621</height>
        </rect>
       </property>
@@ -1031,29 +1001,6 @@ border-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0,
     </property>
     <property name="wordWrap">
      <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QDateTimeEdit" name="dateTimeEdit">
-    <property name="geometry">
-     <rect>
-      <x>780</x>
-      <y>10</y>
-      <width>194</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="readOnly">
-     <bool>true</bool>
-    </property>
-    <property name="dateTime">
-     <datetime>
-      <hour>0</hour>
-      <minute>0</minute>
-      <second>0</second>
-      <year>2024</year>
-      <month>1</month>
-      <day>1</day>
-     </datetime>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
